# -AutoRegime

./: .gitignore  .gitignore.txt  BENCHMARKS.md  Benchmark.md  DISCLAIMER.md  LICENSE  LICENSE.txt  README.md  README.md.txt  __init__.py  amd_check.py  ar_np_compat.py  autoregime__init__.py  batch_reports  batch_reports.py  check_bocpd.py  check_psutil.py  data_loader.py  demo.py  demo.py.txt  demo1_reliable_basic.py  demo2_reliable_multi.py  demo3_builtin_reliable.py  demo4_custom_deterministic.py  demo4_custom_seed.py  export_cache.py  fix_cache_csvs.py  ko_check.py  mypy.ini  nvts_check.py  pyproject.toml  release_rc.cmd  reliable_regime.py  report_SPY.txt  report_TSLA.txt  report_spy.py  requirements.txt  requirements.txt.txt  run_api.bat  setup.py  (+6 more)
.devcontainer/: devcontainer.json
autoregime/: __init__.py  api_server.py  ar_np_compat.py  cli.py  dashboard.py  regime_plots_backup.py
ben/: TLT_hmm_summary.md  aggregate_summary.md
benchmarks/: run.py
core/: regime_detection.py
my_reports/: report_AMZN.txt  report_MSFT.txt  report_TSLA.txt
reports_20250924_192833/: report_AAPL.txt  report_MSFT.txt  report_NVDA.txt
reports_20250924_193550/: report_NVDA.txt
reports_20250924_200401/: report_AAPL.txt  report_NVDA.txt  report_QQQ.txt
reports_20250924_210739/: report_AAPL.txt  report_NVDA.txt  report_QQQ.txt  report_SPY.txt
reports_20250925_124831/: report_AAPL.txt  report_NVDA.txt  report_QQQ.txt  report_SPY.txt
reports_20250925_125007/: report_MSFT.txt  report_TSLA.txt
reports_20250926_165100/: report_SPY.txt
reports_from_file/: report_QQQ.txt
(+52 files in other folders)
